clusterb/06_app1-gateway-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
  namespace: app1
spec:
  parentRefs:
  - name: anycast-shared-gateway
    namespace: anycast-shared-gateway
  hostnames:
  - apps.anycast.goguybrush.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app1
    backendRefs:
    - name: app1
      port: 8080
